--- a/views/login.html
+++ b/views/login.html
@@ -19,6 +19,6 @@
 
   <script>
     // You can also require other files to run in this process
-    require('../renderer.js')
+    require('../dist/renderers/login.js')
   </script>
 </html>
