--- a/views/login.html
+++ b/views/login.html
@@ -11,8 +11,8 @@
       Please login with your Byzance account.
     </p>
     <form id="login">
-      <input id="mail" type="text" name="mail">
-      <input id="password" type="text" name="password">
+      <input id="mail" type="text" name="mail" value="admin@byzance.cz">
+      <input id="password" type="text" name="password" value="123456789">
       <input type="submit" value="Log in">
     </form>
   </body>
