--- a/views/login.html
+++ b/views/login.html
@@ -5,8 +5,6 @@
     <title>Garfield | Login</title>
   </head>
   <body>
-    <h1>Welcome to Garfield App</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
     <p>
       Please login with your Byzance account.
     </p>
@@ -14,6 +12,12 @@
       <input id="mail" type="text" name="mail" value="admin@byzance.cz">
       <input id="password" type="password" name="password" value="123456789">
       <input type="submit" value="Log in">
+      <div>
+        <label>
+          <input id="remember" type="checkbox" name="remember">
+          Remember me
+        </label>
+      </div>
     </form>
   </body>
 
