Complete package flow for win, bug fixes

--- a/views/login.html
+++ b/views/login.html
@@ -9,8 +9,8 @@
       Please login with your Byzance account.
     </p>
     <form id="login">
-      <input id="mail" type="text" name="mail" value="admin@byzance.cz">
-      <input id="password" type="password" name="password" value="123456789">
+      <input id="mail" type="text" name="mail">
+      <input id="password" type="password" name="password">
       <input type="submit" value="Log in">
       <div>
         <label>
