Refactoring and protocol fix

--- a/views/terminal.html
+++ b/views/terminal.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Garfield | Login</title>
+    <title>Garfield | Terminal</title>
   </head>
   <body>
     <p>
@@ -13,7 +13,7 @@
       <input type="submit" value="Send">
       <button id="clear">Clear</button>
     </form>
-  <textarea title="Output" id="output" readonly rows="20" style="overflow: auto; width: 99%; margin-top: 10px;"></textarea>
+  <textarea title="Output" id="output" readonly rows="24" style="overflow: auto; width: 99%; margin-top: 10px;"></textarea>
   </body>
 
   <script>
